--- a/wiffle/wiffle.css
+++ b/wiffle/wiffle.css
@@ -434,9 +434,9 @@
  * @see rgne.ws/RK3zVl
  */
 
-.w_h:before, .w_h:after { content: ""; display: table; } .w_h:after { clear: both; } .w_h { *zoom: 1; } /* rgne.ws/KZHkqq */
-	.w_o { width: 100%; float: left; display: inline; position: relative; } /* rgne.ws/SX31y1 */
-		.debug .w_o { background: rgba(0, 0, 255, .25); } /* blue, #00f */
+.w_wrap:before, .w_wrap:after { content: ""; display: table; } .w_wrap:after { clear: both; } .w_wrap { *zoom: 1; } /* rgne.ws/KZHkqq */
+	.w_area { width: 100%; float: left; display: inline; position: relative; } /* rgne.ws/SX31y1 */
+		.debug .w_area { background: rgba(0, 0, 255, .25); } /* blue, #00f */
 
 /**
  * `px` columns.
@@ -662,7 +662,10 @@
 
 /**
  * Vertical lines between `px` and `h2o` columns.
- * Compatible with IE > 7.
+ * Compatible with IE >= 9.
+ *
+ * IE 7 is having issues showing/hidding pseudo elements.
+ * Using hack to target everything but IE 6-8.
  *
  * @see rgne.ws/M85ynR
  */
@@ -670,7 +673,7 @@
 .w_Alb:before, .w_Blb:before, .w_Clb:before, .w_Dlb:before, .w_Ala:after, .w_Bla:after, .w_Cla:after, .w_Dla:after { border-right: 1px solid #ccc; content: ""; display: none; position: absolute; top: 0; bottom: 0; }
 .w_Alb:before, .w_Blb:before, .w_Clb:before, .w_Dlb:before { left: -21px; }
 .w_Ala:after, .w_Bla:after, .w_Cla:after, .w_Dla:after { right: -20px; }
-.w_Alb:before, .w_Ala:after { display: block; }
+:root *> .w_Alb:before, :root *> .w_Ala:after { display: block; } /* rgne.ws/TxmM1l */
 
 /**
  * Borders.
@@ -707,7 +710,7 @@
 	 */
 	
 	.w_Alb:before, .w_Ala:after { display: none; }
-	.w_Blb:before, .w_Bla:after { display: block; }
+	:root *> .w_Blb:before, :root *> .w_Bla:after { display: block; }
 	
 	/*----------------------------------*/
 	
@@ -745,7 +748,7 @@
 	 */
 	
 	.w_Blb:before, .w_Bla:after { display: none; }
-	.w_Clb:before, .w_Cla:after { display: block; }
+	:root *> .w_Clb:before, :root *> .w_Cla:after { display: block; }
 	
 	/*----------------------------------*/
 	
@@ -783,7 +786,7 @@
 	 */
 	
 	.w_Clb:before, .w_Cla:after { display: none; }
-	.w_Dlb:before, .w_Dla:after { display: block; }
+	:root *> .w_Dlb:before, :root *> .w_Dla:after { display: block; }
 	
 	/*----------------------------------*/
 	
