--- a/wiffle/wiffle.css
+++ b/wiffle/wiffle.css
@@ -6,9 +6,9 @@
  * @link http://hulse.me
  * @docs https://github.com/registerguard/wiffle
  * @copyright (c) 2012 Micky Hulse/The Register-Guard
- * @license Dual licensed under the MIT or GPL Version 2 licenses.
+ * @license Apache License, Version 2.0.
  * @version v3.2.0
- * @date 2012/10/03
+ * @date 2012/10/23
  */
 
 /* ==========================================================================
